<resources>
    <string name="app_name">Exzellenzkoch</string>
    <string name="register">Registrieren</string>
    <string name="email_address">Email Adresse</string>
    <string name="optional_user_id">Gib dir einen Nutzernamen (optional)</string>
    <string name="email_example">max.musterman@muster.de</string>
    <string name="password">Passwort</string>
    <string name="user_id">Nutzername</string>
    <string name="recipe_list_recipe_title">Meine Rezepte</string>
    <string name="recipe_list_create_recipe_button">Neues Rezept erstellen</string>
    <string name="edit_recipe_button">bearbeiten</string>
...
    <string name="enter_preparing_time">Zeit eingeben</string>
    <string name="enter_cooking_time">Backzeit eingeben</string>
    <string name="vegan">vegan</string>
    <string name="vegetarian">vegetarisch</string>
    <string name="preparation_description">Beschreibe mit ein paar Worten, wie dein Rezept zubereitet wird.
                                            Überschriften innerhalb des Textes kannst du durch das Setzen von Sternchen kennzeichnen: *Überschriftname* </string>
    <string name="email_address_input">Gib deine E-Mail Adresse ein</string>
    <string name="password_input">Gib dein Passwort ein</string>
    <string name="search_ingredients">Eier, Lauch, Nudeln, Zucker, ...</string>
    <string name="textView_search_title_text">Gibt den Titel des Rezeptes ein, nach dem du suchen willst:</string>
    <string name="search_ingredients_headline">Gib Zutaten ein, nach denen du suchen willst:</string>
    <string name="editText_hint_search_tags">vegetarisch, Hauptspeise, süß, deftig, ...</string>
    <string name="search_tags_headline">Welche Tags soll das Rezept haben?</string>
    <string name="login">Einloggen</string>
...
